tests/negative/resource_array_of_resource_in_memory.ora
resource TokenUnit = u256;

contract ArrayOfResource {
    pub fn bad(values: [Resource<TokenUnit>; 2]) {}
}
